fix(home): highlight in dark mode not working

--- a/packages/frontend/app/styles/app.css
+++ b/packages/frontend/app/styles/app.css
@@ -656,10 +656,6 @@ video {
   margin-top: 2rem;
 }
 
-.ml-4 {
-  margin-left: 1rem;
-}
-
 .block {
   display: block;
 }
@@ -840,28 +836,12 @@ video {
   width: 100%;
 }
 
-.w-1 {
-  width: 0.25rem;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-\[1px\] {
-  width: 1px;
-}
-
 .min-w-\[200px\] {
   min-width: 200px;
 }
 
 .min-w-\[8rem\] {
   min-width: 8rem;
-}
-
-.min-w-\[160px\] {
-  min-width: 160px;
 }
 
 .max-w-2xl {
@@ -985,30 +965,6 @@ video {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-}
-
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-cols-\[1fr_4fr\] {
-  grid-template-columns: 1fr 4fr;
-}
-
-.grid-cols-\[1fr_3fr\] {
-  grid-template-columns: 1fr 3fr;
-}
-
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-cols-\[3fr_1fr\] {
-  grid-template-columns: 3fr 1fr;
-}
-
-.grid-cols-\[3fr_2fr\] {
-  grid-template-columns: 3fr 2fr;
 }
 
 .flex-row {
@@ -1180,11 +1136,6 @@ video {
   border-style: dashed;
 }
 
-.border-gray-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity));
-}
-
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
@@ -1229,14 +1180,14 @@ video {
   border-bottom-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
 
+.border-b-green-200 {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(187 247 208 / var(--tw-border-opacity));
+}
+
 .border-l-blue-500 {
   --tw-border-opacity: 1;
   border-left-color: rgb(59 130 246 / var(--tw-border-opacity));
-}
-
-.border-l-green-600 {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(22 163 74 / var(--tw-border-opacity));
 }
 
 .border-l-orange-600 {
@@ -1244,33 +1195,8 @@ video {
   border-left-color: rgb(234 88 12 / var(--tw-border-opacity));
 }
 
-.border-l-red-600 {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(220 38 38 / var(--tw-border-opacity));
-}
-
 .border-l-transparent {
   border-left-color: transparent;
-}
-
-.border-b-green-700 {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(21 128 61 / var(--tw-border-opacity));
-}
-
-.border-b-green-400 {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(74 222 128 / var(--tw-border-opacity));
-}
-
-.border-b-green-300 {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(134 239 172 / var(--tw-border-opacity));
-}
-
-.border-b-green-200 {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(187 247 208 / var(--tw-border-opacity));
 }
 
 .bg-blue-50 {
@@ -1372,25 +1298,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-green-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
-}
-
-.bg-gradient-to-t {
-  background-image: linear-gradient(to top, var(--tw-gradient-stops));
-}
-
-.from-indigo-600 {
-  --tw-gradient-from: #4f46e5;
-  --tw-gradient-to: rgb(79 70 229 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.to-pink-400 {
-  --tw-gradient-to: #f472b6;
-}
-
 .fill-gray-200 {
   fill: #e5e7eb;
 }
@@ -1478,8 +1385,8 @@ video {
   padding-bottom: 1rem;
 }
 
-.pb-6 {
-  padding-bottom: 1.5rem;
+.pb-8 {
+  padding-bottom: 2rem;
 }
 
 .pl-10 {
@@ -1522,18 +1429,6 @@ video {
   padding-top: 1rem;
 }
 
-.pt-8 {
-  padding-top: 2rem;
-}
-
-.pt-6 {
-  padding-top: 1.5rem;
-}
-
-.pb-8 {
-  padding-bottom: 2rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -1565,8 +1460,8 @@ video {
   line-height: 2.5rem;
 }
 
-.text-6xl {
-  font-size: 3.75rem;
+.text-5xl {
+  font-size: 3rem;
   line-height: 1;
 }
 
@@ -1588,11 +1483,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
 }
 
 .font-bold {
@@ -1633,11 +1523,6 @@ video {
 
 .tracking-wide {
   letter-spacing: 0.025em;
-}
-
-.\!text-slate-900 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(15 23 42 / var(--tw-text-opacity)) !important;
 }
 
 .text-black {
@@ -1695,11 +1580,6 @@ video {
   color: rgb(21 128 61 / var(--tw-text-opacity));
 }
 
-.text-indigo-600 {
-  --tw-text-opacity: 1;
-  color: rgb(79 70 229 / var(--tw-text-opacity));
-}
-
 .text-indigo-700 {
   --tw-text-opacity: 1;
   color: rgb(67 56 202 / var(--tw-text-opacity));
@@ -1722,11 +1602,6 @@ video {
 .text-red-700 {
   --tw-text-opacity: 1;
   color: rgb(185 28 28 / var(--tw-text-opacity));
-}
-
-.text-slate-100 {
-  --tw-text-opacity: 1;
-  color: rgb(241 245 249 / var(--tw-text-opacity));
 }
 
 .text-slate-500 {
@@ -1752,11 +1627,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-green-800 {
-  --tw-text-opacity: 1;
-  color: rgb(22 101 52 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -2149,6 +2019,11 @@ input[type="range"]::-moz-range-progress {
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-green-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-indigo-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(99 102 241 / var(--tw-bg-opacity));
@@ -2159,6 +2034,11 @@ input[type="range"]::-moz-range-progress {
   background-color: rgb(254 226 226 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-red-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-red-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
@@ -2167,16 +2047,6 @@ input[type="range"]::-moz-range-progress {
 .hover\:bg-slate-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-green-200:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-red-200:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
 }
 
 .hover\:text-black:hover {
@@ -2614,10 +2484,6 @@ input[type="range"]::-moz-range-progress {
 }
 
 @media (min-width: 768px) {
-  .md\:col-span-3 {
-    grid-column: span 3 / span 3;
-  }
-
   .md\:mt-0 {
     margin-top: 0px;
   }
@@ -2636,10 +2502,6 @@ input[type="range"]::-moz-range-progress {
 
   .md\:hidden {
     display: none;
-  }
-
-  .md\:h-\[300px\] {
-    height: 300px;
   }
 
   .md\:w-2\/5 {
@@ -2664,10 +2526,6 @@ input[type="range"]::-moz-range-progress {
 
   .md\:max-w-\[480px\] {
     max-width: 480px;
-  }
-
-  .md\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -2710,10 +2568,6 @@ input[type="range"]::-moz-range-progress {
 
   .md\:pl-0 {
     padding-left: 0px;
-  }
-
-  .md\:pr-6 {
-    padding-right: 1.5rem;
   }
 
   .md\:text-5xl {
